<resources>
    <string name="app_name">益农宝</string>
    <string name="tv_header_main">首页</string>
    <string name="tv_header_ask">我要问</string>
    <string name="tv_header_exper">专家库</string>
    <string name="tv_header_exper_detail">专家详情</string>
    <string name="tv_header_login">登录</string>
    <string name="tv_header_resign">注册</string>
    <string name="tv_header_resetpass">重置密码</string>
    <string name="tv_header_findback">找回密码</string>
    <string name="tv_header_setting">设置</string>
    <string name="tv_header_phonecall">电话咨询</string>
    <string name="tv_hearder_personinformation">编辑资料</string>
    <string name="tv_header_exper_teachnology_detail">个人文章</string>
    <string name="tv_header_group">群组</string>
    <string name="tv_header_konwledge">知识库</string>
    <string name="tv_header_exhibition">农资展厅</string>
    <string name="tv_header_exhibition_type">产品列表</string>
    <string name="tv_header_exhibition_detail">产品详情</string>
    <string name="tv_header_exhibition_technology_detail">技术详情</string>
    <string name="tv_header_exhibition_news_detail">新闻详情</string>
    <string name="tv_header_pest">病虫害图库</string>
    <string name="tv_header_pest_type">病虫害列表</string>
    <string name="tv_header_pest_detail">病虫害详情</string>
    <string name="tv_header_video">视频库</string>
    <string name="tv_header_video_type">视频列表</string>
    <string name="tv_header_konwledge_detail">问题详情</string>
    <string name="tv_header_group_personinfo">成员资料</string>
    <string name="txt_main">首\t页</string>
    <string name="txt_main_home">首页</string>
    <string name="txt_main_collect">我的收藏</string>
    <string name="txt_main_person">个人中心</string>
    <string name="txt_main_set">设置</string>
    <string name="btn_regsign">注册</string>
    <string name="btn_getmessage">短信获取验证码</string>
    <string name="txt_referee">推荐人（此项非必填项）</string>
    <string name="rbtn_agreesign">同意注册协议</string>
    <string name="txt_login">登录</string>
    <string name="txt_loginuser">手机号/邮箱/用户名</string>
    <string name="txt_loginpass">输出密码</string>
    <string name="txt_loginresign">注册</string>
    <string name="txt_loginbtn">登\t\t录</string>
    <string name="txt_loginforget">忘记密码</string>
    <string name="txt_resetpass_newpass">输入新密码（8&#8211;16个字符）</string>
    <string name="txt_resetpass_resure">确认密码</string>
    <string name="txt_resetpass">重置密码</string>
    <string name="txt_resetpass_done">提\t\t\t交</string>
    <string name="tv_findback_phone">请输入手机号码</string>
    <string name="tv_findback_getcode">短信获取验证码</string>
    <string name="btn_findback_done">完\t\t成</string>
    <string name="tv_exper_tab_left">按地区</string>
    <string name="tv_exper_tab_middle">按作物</string>
    <string name="tv_exper_tab_right">按类型</string>
    <string name="label_exper_detail_crop">作物：$message$</string>
    <string name="label_exper_detail_address">地区：$message$</string>
    <string name="label_exper_detail_replay">回复：$number$</string>
    <string name="label_exper_detail_focus">关注：$number$</string>
    <string name="tv_exper_detail_tab_focus">关注</string>
    <string name="tv_exper_detail_tab_phone">96318</string>
    <string name="label_exper_detail_context">个人简介</string>
    <string name="label_exper_detail_question">回答列表</string>
    <string name="label_exper_detail_technology">技术列表</string>
    <string name="label_exper_detail_relate">关联企业</string>
    <string name="tv_exper_teachnology_look">浏览&#160;&#160;$number$</string>
    <string name="tv_exper_teachnology_comment">评论&#160;&#160;$number$</string>
    <string name="tv_exper_technology_collect">收藏</string>
    <string name="tv_exper_technology_share">分享</string>
    <string name="tv_person_information">个人资料</string>
    <string name="tv_person_video">收藏的视频</string>
    <string name="tv_person_group">我的群组</string>
    <string name="tv_person_name">用户名&#160;&#160;$message$</string>
    <string name="tv_person_type_normal">普通用户</string>
    <string name="tv_person_type_special">特聘专家</string>
    <string name="tv_person_focus">关注度</string>
    <string name="tv_person_number">积分&#160;&#160;$number$</string>
    <string name="tv_person_level">等级&#160;&#160;$number$级</string>
    <string name="tv_person_myask">我问的</string>
    <string name="tv_person_askme">问我的</string>
    <string name="tv_person_myreplay">我答的</string>
    <string name="tv_person_post">我要发帖</string>
    <string name="tv_person_collect">我的收藏</string>
    <string name="tv_person_help">帮助中心</string>
    <string name="tv_person_feedback">用户反馈</string>
    <string name="tv_person_updatepwd">修改密码</string>
    <string name="btn_person_exit">退&#160;出&#160;登&#160;录</string>
    <string name="tv_person_update_password_old">输入旧密码：</string>
    <string name="tv_person_update_password_new">输入新密码：</string>
    <string name="tv_person_update_password_renew">确认新密码：</string>
    <string name="btn_ask_submit">提&#160;&#160;&#160;&#160;交</string>
    <string name="txt_person_editdata">编辑资料</string>
    <string name="txt_person_modifyhead">修改头像</string>
    <string name="txt_person_username">用户名</string>
    <string name="txt_person_realname">真实姓名</string>
    <string name="txt_person_sex">性别</string>
    <string name="txt_person_address">所在地</string>
    <string name="txt_person_personnote">个人说明</string>
    <string name="txt_person_crops">作物</string>
    <string name="txt_person_acres">亩数</string>
    <string name="txt_person_remind">4&#8211;30个字符，支持中英文、数字</string>
    <string name="txt_person_add">继\t续\t添\t加</string>
    <string name="txt_person_sexman">男</string>
    <string name="txt_person_sexwoman">女</string>
    <string name="txt_person_noteremind">不少于20个字符，支持中英文、数字</string>
    <string name="txt_person_acres1">50亩以下</string>
    <string name="txt_person_acres2">50&#8211;100亩</string>
    <string name="txt_person_acres3">100&#8211;500亩</string>
    <string name="txt_person_acres4">500&#8211;1000亩</string>
    <string name="txt_person_acres5">1000亩以上</string>
    <string name="txt_person_ok">确定</string>
    <string name="txt_person_cancel">取消</string>
    <string name="txt_inpro">96318\t\t\t\t\t浙江省内</string>
    <string name="txt_outpro">400&#8211;85&#8211;96318\t\t浙江省外</string>
    <string name="title_activity_phone_call">PhoneCallActivity</string>
    <string name="txt_phoneinpro">96318</string>
    <string name="txt_phoneoutpro">400&#8211;85&#8211;96318</string>
    <string name="txt_call">呼叫</string>
    <string name="txt_cancel">取消</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="txt_setting_messagepush">消息推送</string>
    <string name="txt_setting_offline">离线缓存</string>
    <string name="txt_setting_clsmessagelist">清除消息列表</string>
    <string name="txt_setting_clsimg">清除缓存图片</string>
    <string name="txt_setting_clsvideo">清除缓存视频</string>
    <string name="txt_setting_clsshops">清除缓存商铺</string>
    <string name="label_konwledge_tab_left">全部</string>
    <string name="label_konwledge_tab_middle">浏览量</string>
    <string name="label_konwledge_tab_right">回复量</string>
    <string name="tv_konwledge_type">分类：$name$&#160;&#160;$type$</string>
    <string name="tv_konwledge_look">浏览&#160;$number$</string>
    <string name="label_knowledge_type_all">全部作物</string>
    <string name="label_knowledge_question">专家解答</string>
    <string name="label_knowledge_comment">网友评论</string>
    <string name="label_knowledge_relate">相关问题</string>
    <string name="label_knowledge_tag">标签：$name$&#160;&#160;$type$</string>
    <string name="tv_exhibition_offer">供应商：$message$</string>
    <string name="label_exhibition_content">详细内容</string>
    <string name="label_exhibition_case">应用案例</string>
    <string name="label_exhibition_counsel">采购咨询</string>
    <string name="label_exhibition_company_new">企业新闻</string>
    <string name="btn_exhibition_submit">我要咨询</string>
    <string name="tv_exhibition_tab_product">产品列表</string>
    <string name="tv_exhibition_tab_technology">植保技术</string>
    <string name="tv_exhibition_tab_exper">企业专家</string>
    <string name="tv_exhibition_tab_context">企业动态</string>
    <string name="btn_exhibition_exper_phone">电话咨询</string>
    <string name="btn_exhibition_exper_online">在线咨询</string>
    <string name="tv_exhibition_company_link">联系人：$message$</string>
    <string name="tv_exhibition_company_bile">手机：$message$</string>
    <string name="tv_exhibition_company_phone">电话：$message$</string>
    <string name="tv_exhibition_company_fax">传真：$message$</string>
    <string name="tv_exhibition_company_address">公司地址：$message$</string>
    <string name="label_pest_product">相关防治产品</string>
    <string name="txt_video_detail">详情</string>
    <string name="txt_video_comment">评论</string>
    <string name="txt_video_selection">选集</string>
    <string name="txt_video_uploadtime">上传时间:</string>
    <string name="txt_video_uploader">上传者:</string>
    <string name="txt_video_category">类型:</string>
    <string name="txt_video_playtime">播放:</string>
    <string name="txt_video_commenttime">评论:</string>
    <string name="txt_video_collect">收藏:</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer">加载更多</string>
    <string name="title_activity_person_note">PersonNoteActivity</string>
    <string name="err_no_data">没有数据！</string>
    <string name="txt_group_huaxian">点这里，搜索想加入的群组</string>
    <string name="txt_group_search">按群组名称搜索群组</string>
    <string name="txt_group_hotgroup">热门群组</string>
    <string name="txt_group_groupsrecommend">群组推荐</string>
    <string name="txt_group_dynamic">群组动态</string>
    <string name="txt_group_groupmanager">群主:</string>
    <string name="txt_group_number">群号码:</string>
    <string name="txt_group_member">群组成员:</string>
    <string name="txt_group_image">群相册</string>
    <string name="txt_group_qution">群组问题</string>
    <string name="txt_group_groupnote">群公告</string>
    <string name="txt_group_level">群等级</string>
    <string name="txt_group_address">地点：</string>
    <string name="txt_group_category">分类：</string>
    <string name="txt_group_info">群介绍：</string>
    <string name="txt_group_add">加入该群</string>
    <string name="txt_group_head">群头像</string>
    <string name="txt_group_sex">性别</string>
    <string name="txt_group_realname">真实姓名</string>
    <string name="txt_group_introduce">自我介绍</string>
    <string name="txt_group_hobby">兴趣爱好</string>
    <string name="txt_group_personlevel">等级</string>
    <string name="txt_group_area">地区</string>
    <string name="txt_group_drop">退出该群</string>
    <string name="txt_group_searchinfo">输入搜索关键字</string>
    <string name="txt_group_problemcategory">分类</string>
    <string name="title_activity_group_mian">GroupMianActivity</string>
    <string name="title_activity_search_group">SearchGroupActivity</string>
    <string name="title_activity_list_of_group">ListOfGroup</string>
    <string name="title_activity_group_person_info">GroupPersonInfo</string>
    <string name="title_activity_group_induction">GroupInduction</string>
    <string name="txt_group_searchhint">请输入关键字</string>
    <string name="txt_group_foodcrp">粮食作物</string>
    <string name="txt_group_crops">经济作物</string>
    <string name="txt_group_fruit">瓜果类</string>
    <string name="title_activity_group_search_list">GroupSearchListActivity</string>
</resources>