<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_setting_xiaxian" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="20sp"
            android:text="@string/txt_setting_messagepush"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <ToggleButton
            android:id="@+id/togbtn_messagepush"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20sp"
            android:background="@android:color/transparent"
            android:button="@drawable/checkbox_setting"
            android:checked="false"
            android:text=""
            android:textOff=""
            android:textOn="" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_setting_xiaxian" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="20sp"
            android:text="@string/txt_setting_offline"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <ToggleButton
            android:id="@+id/togbtn_offline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20sp"
            android:background="@android:color/transparent"
            android:button="@drawable/checkbox_setting"
            android:checked="false"
            android:text=""
            android:textOff=""
            android:textOn="" />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/img_setting_line"
        android:contentDescription="@null" />

    <TextView
        android:id="@+id/txt_setting_clsmessagelist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_setting_xiaxian"
        android:gravity="center"
        android:text="@string/txt_setting_clsmessagelist"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txt_setting_clsimage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_setting_xiaxian"
        android:gravity="center"
        android:text="@string/txt_setting_clsimg"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txt_setting_clsvideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_setting_xiaxian"
        android:gravity="center"
        android:text="@string/txt_setting_clsvideo"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txt_setting_clsshops"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_setting_xiaxian"
        android:gravity="center"
        android:text="@string/txt_setting_clsshops"
        android:textSize="20sp" />

</LinearLayout>