<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >
    	<RelativeLayout 
        android:layout_width="180dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        
        >
        <TextView 
            android:layout_margin="20dp"
            android:id="@+id/txt_96318_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_phoneoutpro"
            android:textColor="@color/callin"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
		    android:layout_centerVertical="true" 
            android:drawableBottom="@drawable/bg_96318_callline"
            android:drawablePadding="20dp"
            />
		<TextView 
		    android:layout_margin="20dp"
		    android:id="@+id/txt_96318_call"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/txt_call"
		    android:textColor="@color/call_red"
		    android:layout_below="@id/txt_96318_phone"
		    android:layout_alignParentLeft="true"
		    />
		<TextView
		    android:layout_margin="20dp"
		    android:id="@+id/txt_96318_cancel"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/txt_cancel"
		    android:textColor="@color/blue"
		    android:layout_below="@id/txt_96318_phone"
		    android:layout_alignParentRight="true"
		    
		    />
        
        
    </RelativeLayout>
    

</RelativeLayout>
