<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	
	    <TextView 
        android:paddingLeft="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_group_foodcrp"
        android:background="@drawable/bg_group_crops"
        android:gravity="center_vertical"
        />
    <GridView 
        android:id="@+id/gv_group_foodcrp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    	android:numColumns="5"
    	android:stretchMode="columnWidth"
        ></GridView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20sp"
        android:text="@string/txt_group_crops"
        android:background="@drawable/bg_group_crops"
        android:gravity="center_vertical"
        />
    <GridView 
        android:id="@+id/gv_group_crops"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    	android:numColumns="5"
    	android:stretchMode="columnWidth"
        ></GridView>
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20sp"
        android:text="@string/txt_group_fruit"
        android:background="@drawable/bg_group_crops"
        android:gravity="center_vertical"
        />
    <GridView 
        android:id="@+id/txt_group_fruit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    	android:numColumns="5"
    	android:stretchMode="columnWidth"
        ></GridView>
	    
	
    

    
</LinearLayout>