<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="10sp"
    >
    
    <TextView 
        android:id="@+id/txt_video_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:text="浙江：第一季\t农业资讯"
        android:textSize="20sp"
        />
    
    <TextView 
        android:id="@+id/txt_video_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="00:09:00"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        />
    <TextView 
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:paddingTop="20sp"
        android:id="@+id/txt_video_descp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="本短片讲述了早播大棚辣椒栽培，可通过塑料大棚保温,达到比正常春季露地栽培的辣椒提早上市，增加单位面积产值的目的"
        />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20sp"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        >
        <LinearLayout 
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_video_uploadtime"
            />
            <TextView 
                android:id="@+id/txt_video_uploadtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="暂无"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_video_category"
                />
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="资讯"
                android:id="@+id/txt_video_category"
                />
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10sp"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        >
        <LinearLayout 
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_video_uploader"
                />
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_video_uploader"
                android:lines="1"
                android:text="浙江省农业厅旅行者发布委员会"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_video_playtime"
                />
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="30.1万"
                android:id="@+id/txt_video_playtimes"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10sp"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        >
        <LinearLayout 
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_video_commenttime"
                />
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="92"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_video_collect"
                />
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_video_collect"
                android:text="0"
                />
        </LinearLayout>
    </LinearLayout>
    
    

</LinearLayout>
