<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/view_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20sp" >

        <LinearLayout
            android:id="@+id/ll_bodyer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/iv_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginTop="15sp"
                    android:contentDescription="@null" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15sp"
                    android:layout_marginRight="15sp"
                    android:layout_marginTop="25sp"
                    android:layout_toRightOf="@+id/iv_photo"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_name"
                    android:layout_marginLeft="15sp"
                    android:layout_marginRight="15sp"
                    android:layout_marginTop="5sp"
                    android:layout_toRightOf="@+id/iv_photo"
                    android:textColor="@color/gray"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_collect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/iv_photo"
                    android:layout_marginRight="10sp"
                    android:layout_toLeftOf="@+id/tv_share"
                    android:drawableLeft="@drawable/icon_exper_technology_collect"
                    android:drawablePadding="5sp"
                    android:gravity="center_vertical"
                    android:text="@string/tv_exper_technology_collect" />

                <TextView
                    android:id="@+id/tv_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/iv_photo"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="30sp"
                    android:drawableLeft="@drawable/icon_exper_technology_share"
                    android:drawablePadding="5sp"
                    android:gravity="center_vertical"
                    android:text="@string/tv_exper_technology_share" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_offer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10sp"
                android:text="@string/tv_exhibition_offer"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@drawable/bg_exper_detail_label"
                android:gravity="center_vertical"
                android:paddingLeft="10sp"
                android:text="@string/label_exhibition_content"
                android:textSize="16sp" />

            <WebView
                android:id="@+id/web_context"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:textColor="@color/gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_case"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_exper_detail_label"
                android:gravity="center_vertical"
                android:paddingLeft="10sp"
                android:text="@string/label_exhibition_case"
                android:textSize="16sp" />

            <com.innouni.yinongbao.view.MyListView
                android:id="@+id/listview"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_exper_detail_label"
                android:gravity="center_vertical"
                android:paddingLeft="10sp"
                android:text="@string/label_exhibition_counsel"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:background="@drawable/edt_exhibition_phone"
                android:hint="@string/hint_exhibition_phone"
                android:inputType="phone"
                android:paddingLeft="5sp"
                android:paddingRight="5sp" />

            <EditText
                android:id="@+id/edt_context"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:background="@drawable/edt_exhibition_context"
                android:gravity="top"
                android:hint="@string/hint_exhibition_context"
                android:inputType="textMultiLine"
                android:padding="5sp" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15sp"
                android:background="@drawable/btn_submit"
                android:text="@string/btn_exhibition_submit"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>