<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <include layout="@layout/view_header" />
    
    <include layout="@layout/view_search" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:weightSum="3" >

        <TextView
            android:id="@+id/tv_tab_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="10sp"
            android:paddingTop="10sp"
            android:text="@string/label_konwledge_tab_left"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/line_exper_vertical"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/tv_tab_middle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="10sp"
            android:paddingTop="10sp"
            android:text="@string/label_konwledge_tab_middle"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/line_exper_vertical"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/tv_tab_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="10sp"
            android:paddingTop="10sp"
            android:text="@string/label_konwledge_tab_right"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/line_pop_exper_filrate"
        android:contentDescription="@null" />

    <com.innouni.yinongbao.view.PullToRefreshView
        android:id="@+id/pullview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="@null" />
    </com.innouni.yinongbao.view.PullToRefreshView>

</LinearLayout>